# fs.archive

./: .travis.yml  CHANGELOG.md  COPYING  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py
.github/workflows/: publish.yml  test.yml
fs/archive/: __init__.py  _utils.py  base.py  meta.py  opener.py  tarfs.py  test.py  wrap.py  zipfs.py
fs/archive/isofs/: __init__.py  _utils.py  names.py  structs.py  utils.py
fs/archive/sevenzipfs/: __init__.py
fs/archive/tarfs/: __init__.py  file.py  iotools.py  tarfile2.py
fs/archive/zipfs/: __init__.py
tests/: __init__.py  test_iso.py  test_isofs.py  test_open_archive.py  test_sevenzipfs.py  test_tarfs.py  test_utils.py  test_wrap.py  test_zipfs.py
tests/resources/: test.iso  test.joliet.iso  test.rr.iso
