[metadata]
name = fs.archive
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@ens-cachan.fr
home-page = https://github.com/althonos/fs.archive
description = Enhanced archive filesystems for Pyfilesystem2
long-description = file: README.rst
license = MIT
platform = any
requires-dist = setuptools
keywords = archive, zip, tar, filesystem, Pyfilesystem2
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3.3
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: System :: Filesystems

[options]
zip_safe = true
include_package_data = false
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = fs.archive
test_suite = tests
install_requires =
  fs >= 2.0.4
  six
  fs.proxy
setup_require =
  setuptools
  nose
  rednose
tests_require =
  rednose
  nose
  nose-cov
  coverage
  mock ; python_version < '3.4'

[options.entry_points]
fs.archive.open_archive =
  .zip     = fs.archive.zipfs:ZipFS
  .tar.gz  = fs.archive.tarfs:TarFS
  .tar.bz2 = fs.archive.tarfs:TarFS
  .tar.xz  = fs.archive.tarfs:TarFS
  .tar     = fs.archive.tarfs:TarFS

[aliases]
test = nosetests

[bdist_wheel]
universal = true

[coverage:report]
show_missing = true
exclude_lines =
  pragma: no cover
  @abc.abstractmethod
  @abc.abstractproperty
  raise NotImplementedError
  return NotImplemented
  if six.PY2
  if six.PY3

[pydocstyle]
inherit = false
ignore = D100,D200,D203,D213,D406,D407

[nosetests]
verbosity = 2
with-coverage = true
cover-package = fs.archive
with-doctest = true
doctest-extension = .rst
rednose = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true
